<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.usuario.PerfilUsuarioFragment">

    <TextView
        android:id="@+id/textCadastroUsuarioTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register_user_attUser"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/userProfileImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textCadastroUsuarioTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/foto_de_perfil"/>


    <EditText
        android:id="@+id/registerNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/register_user_name"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userProfileImageView"/>

    <EditText
        android:id="@+id/registerEmailEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/activity_email_edit"
        android:autofillHints=""
        android:hint="@string/register_user_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/registerNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <EditText
        android:id="@+id/idadeEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/activity_age_edit"
        android:autofillHints=""
        android:hint="@string/register_user_age"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/registerEnderecoEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/activity_end_edit"
        android:autofillHints=""
        android:hint="@string/register_user_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idadeEditText" />

    <EditText
        android:id="@+id/registerPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/activity_password_edit"
        android:autofillHints=""
        android:hint="@string/register_user_edit"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/registerEnderecoEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/registerConfirmPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/activity_confirm_password"
        android:autofillHints=""
        android:hint="@string/register_user"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/registerPasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_user_att"
        app:layout_constraintTop_toBottomOf="@id/registerConfirmPasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/sairButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_user_exit"
        app:layout_constraintTop_toBottomOf="@id/registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>